# healthcare_project

./: .coverage  .gitignore  pyproject.toml  pytest.ini  requirements.txt
datas/: interactions.csv  medications.csv  patiens.csv
src/: medication.py  patient.py
test/functionnal/: test_medication_functional.py  test_medication_load.py
test/unit/: TP.md  test_medication_unit.py  test_patient_unit.py
