[project]
name = "healthcare-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama==0.4.6",
    "coverage==7.13.4",
    "flake8==7.3.0",
    "iniconfig==2.3.0",
    "mccabe==0.7.0",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.1",
    "pluggy==1.6.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-split==0.11.0",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "tzdata==2025.3",
]
